--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,10 @@ hr {
    -webkit-background-size: cover;
     background-size: cover;
 }
+.section--gray  {
+    background-color: #f8f8f8;
+}
+
 .section__header {
     width: 100%;
     max-width: 950px;
@@ -285,44 +289,44 @@ hr {
     color: #999;
 }
   
-    /*about ставим картинки и делаем градиент */
-.about {
+    /*секция card ставим картинки и делаем градиент */
+.card {
     margin-top: 60px;
     display: flex;
     justify-content: space-between;
 }
 
-.about__item {
+.card__item {
     width: 380px;
     position: relative;
 
     background-color: #00ffff;
 }
-.about__item:hover .about__img {
+.card__item:hover .card__img {
     transform: translate3d(-10px, -10px, 
     0);
 }
 
-.about__item:hover .about__img img {
+.card__item:hover .card__img img {
     opacity: .1;
 }
 
-.about__item:hover .about__text {
+.card__item:hover .card__text {
     opacity: 1;
 }
 
-.about__img {
+.card__img {
     background: linear-gradient(to bottom,
     #f38181, #fce38a);
     transform: .2s linear;
 }
 
-.about__img img {
+.card__img img {
     display: block;
     transition: opacity .1s linear;
 }
 
-.about__text {
+.card__text {
     font-size: 18px;
     color: #fff;
     width: 100%;
@@ -429,7 +433,6 @@ hr {
     margin-bottom: 10px;
     border: 1px solid #F5F5F5;
 }
-
 .accordion__item.active 
 .accordion__content {
     display: block;
@@ -438,15 +441,12 @@ hr {
 .accordion__header {
     border-bottom-color: silver;
 }
-
 .accordion__item.active 
 .accordion__header:after {
-    transform: translateY(-50%)
+    transform: translateY(-50%) /*выравнивание по центру*/
     rotate(-45deg); /*поворот стрелки вверх*/
     margin-top: 5px;
-    
 }
-
 .accordion__header {
     padding: 15px 20px 15px 100px;
     position: relative;
@@ -492,4 +492,74 @@ hr {
     font-size: 14px;
     color: #333;
     text-transform: uppercase;
+}
+
+        /*раздел для отзывов reviows*/
+
+.reviews {
+    padding: 0 110px;
+    position: relative; /*позицион.кнопки.2ой момент*/
+}       
+.reviews__item {
+    padding-left: 205px;
+    position: relative;
+}  
+.reviews__photo {
+    border: 2px aqua;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}  
+.reviews__text {
+    margin-bottom: 10px;
+    font-size: 24px;
+    font-style: italic;
+    font-weight: 300;
+    color: #999;
+}  
+.reviews__author {
+    font-size: 24px;
+    color: #000;
+    font-family: 'Kaushan Script', 
+    cursive;
+}
+.reviews__author:before {        /*полоска перед текстом*/   
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 60px;
+    height: 3px;
+    margin-right: 10px;
+
+    background-color: #f38181;
+}   
+.reviews___btn {        /*1й момент.прописываем для кнопок общие стили*/
+    font-size: 0;  /*скрываем текст*/
+    color: transparent;
+
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+    transform: translateY(-50%); /*выравниваем по вертикали*/
+}   /*кнопки сделали, делаем стрелочки*/
+.reviews___btn:after {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+
+    border-top: 2px solid rgb(192, 184, 184);
+    border-left: 2px solid rgb(192, 184, 184);
+
+    
+  
+}
+.reviews___btn--pref {
+    left: 0;
+    transform: rotate(-45deg);
+}
+.reviews___btn--next {
+    right: 0;
+    transform: rotate(135deg);
 }
