--- a/css/style.css
+++ b/css/style.css
@@ -563,3 +563,25 @@ hr {
     right: 0;
     transform: rotate(135deg);
 }
+
+.card__item:hover .card__ico {
+    opacity: 1;
+}
+.card__ico {
+    width: 100%;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+    opacity: 0;
+
+    position: absolute;
+    top: 42%;
+    left: 0;
+    z-index: 2;
+    transform: translate3d(0 -50% 0);
+
+    transition: opacity .2s linear;
+}
+.card__info {
+    
+}
