--- a/css/style.css
+++ b/css/style.css
@@ -298,20 +298,25 @@ hr {
 
 .card__item {
     width: 380px;
-    position: relative;
-
-    background-color: #00ffff;
 }
-.card__item:hover .card__img {
+
+.card__inner {
+   
+    position: relative;
+    background-color: #00ffff;
+   
+    
+}
+.card__inner:hover .card__img {
     transform: translate3d(-10px, -10px, 
     0);
 }
 
-.card__item:hover .card__img img {
+.card__inner:hover .card__img img {
     opacity: .1;
 }
 
-.card__item:hover .card__text {
+.card__inner:hover .card__text {
     opacity: 1;
 }
 
@@ -342,6 +347,23 @@ hr {
     transform: translate3d(0 -50% 0);
 
     transition: opacity .2s linear;
+}
+.cart__info {
+    margin-top: 20px;
+    text-align: center;
+}
+.cart__name {
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #333;
+
+    text-transform: uppercase;
+}
+.cart__prof {
+    font-size: 15px;
+    font-style: italic;
+    width: 300;
+    color: #333;
 }
 
             /*statistics*/
@@ -564,24 +586,25 @@ hr {
     transform: rotate(135deg);
 }
 
-.card__item:hover .card__ico {
-    opacity: 1;
-}
-.card__ico {
-    width: 100%;
-    text-transform: uppercase;
-    font-weight: 700;
-    text-align: center;
-    opacity: 0;
 
-    position: absolute;
-    top: 42%;
-    left: 0;
-    z-index: 2;
-    transform: translate3d(0 -50% 0);
-
-    transition: opacity .2s linear;
+/*.social  иконки*/
+.social {
+    display: flex;
+    justify-content: center;
 }
-.card__info {
+.social__item {
+    width: 56;
+    height: 56;
+   
+    background-color: #fce38a;
+    border-right: 1px solid #f38181;
     
+    text-decoration: none;
+    color: #f38181;
+    line-height: 0;
+}
+/*logos*/
+.logos {
+    display: flex;
+    justify-content: space-between;
 }
