--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,23 @@ hr {
 .section--gray  {
     background-color: #f8f8f8;
 }
+.section--сlients {
+    background: #F5F5F5
+    url("../images/8blok/fon2.png") 
+    center no-repeat ;
+
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+.section--map {
+   padding: 40px 0;
+    background: #e6e6e6
+    url("../images/9blok/mapfon.png") 
+    center no-repeat;
+    
+    -webkit-background-size: cover;
+    background-size: cover;/*устанавливаем картинку во всю ширину*/
+}
 
 .section__header {
     width: 100%;
@@ -300,7 +317,7 @@ hr {
     width: 380px;
 }
 
-.card__inner {
+.card__inner{
    
     position: relative;
     background-color: #00ffff;
@@ -523,11 +540,12 @@ hr {
     position: relative; /*позицион.кнопки.2ой момент*/
 }       
 .reviews__item {
-    padding-left: 205px;
+    padding-left: 255px;
     position: relative;
 }  
 .reviews__photo {
     border: 2px aqua;
+    border-radius: 50%;
     position: absolute;
     top: 0;
     left: 0;
@@ -607,4 +625,309 @@ hr {
 .logos {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
+/*works*/
+.works {
+    display: flex;
+    
+}
+.works__col {
+    flex: 1 1 0;
+}
+.works__item {
+    position: relative;
+
+    background: linear-gradient(to bottom,  
+    #f38181, #fce38a);
+}
+.works__item:hover .works__image{
+    opacity: .1;
+}
+
+.works__item:hover .works__info {
+    opacity: 1;
+}
+/*  max-width: 100%;
+    height: auto; уменьшаем картинки по размеру страницы*/
+.works__image {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    transition: opacity .2s linear;
+}
+.works__info {
+    width: 100%;
+    padding: 0 15px;
+    text-align: center;
+    color: #fff;
+    opacity: 0;
+
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+
+    transform: translate3d(0, -50% 0);
+    transition: opacite .2s linear;
+}
+.works__title {
+    margin-bottom: 5px;
+
+    color: #fff;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+.works__text {
+    font-size: 15px;
+    font-weight: 300;
+    font-style: italic;
+}
+/*новый блок. раздел Clients*/
+.сlients {
+    display: flex;
+    flex-wrap: wrap; /*чтобы колонки не перемещались на новую строку*/
+    margin-top: 70px;
+}
+.сlients__item {
+    width: 50%;
+    padding: 0 45px 0 175px; /*отступы перед аватаркой и до текста*/
+    position: relative;/*т.к.аватарка будет  позищен абсолют*/
+    margin-bottom: 60px;
+}
+.clients__photo {
+    width: 110px;
+    height: 110px;
+
+    border-radius: 50%;
+
+    position: absolute;
+    top: 0;
+    left: 40px;
+    z-index: 1;
+}
+.clients__name {
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #333;
+    text-transform: uppercase;
+}
+.clients__prof {
+    font-size: 15px;
+    color:#333;
+    font-style: italic;
+    font-weight: 300;
+}
+.clients__text {
+    font-size: 15px;
+    color: #999;
+}
+/*полоска перед текстом*/
+.clients__text:before {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    margin: 15px 0;
+
+    background-color: #f38181;
+}
+/*blog*/
+.blog {
+    display: flex;
+    justify-content: space-between;/*отделяем картинки друг от друга*/
+}
+.blog__item {
+    width: 31%;
+}
+.blog__header {
+    position: relative; /*т.к. в нем будем опозиционировать
+    блог относительно шапки*/
+    margin-bottom: 14px;
+}
+.blog__photo {
+    display: block;
+    max-width: 100%;/*чтобы фото не вылезало из 
+    этого блока*/
+    height: auto;
+}
+.blog__date {
+    padding: 10px 20px;
+    background-color: rgb(93, 231, 224);
+
+    font-style: italic;
+    font-size: 15px;
+    color: #fff;
+    font-weight: 300;
+    text-align: center;
+
+    position: absolute;
+    bottom: 10px;
+    left: -10px;/*сдвиг ионки влево*/
+    z-index: 1;
+}
+.blog__date-day {
+    font-size: 30px;
+    line-height: 1;
+    font-weight:700;
+    font-style: normal;/*пишем normal,т.к. он находится в блоке*/
+}
+.blog__content {
+    margin-bottom: 14px; /*отделяем текст от футера*/
+}
+.blog__title {
+    margin-bottom: 10px;
+
+    font-size: 14px;
+    color: #333;
+    text-transform: uppercase;
+}
+.blog__title a {
+    color: inherit;
+    text-decoration: none;
+}
+.blog__title a:hover {
+    text-decoration: underline;/*при наводе появляется полоска*/
+}
+.blog__text {
+    font-size: 15px;
+    color: #999;
+}
+.blog__footer {
+    padding-top: 14px;
+    border-top: 1px solid #e5e5e5; /*полоска под текстом*/
+
+    font-size: 15px;
+    font-weight: 300;
+    font-style: italic;
+    color: #999;
+}
+.blog-stat__item {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 10px;
+}
+
+/*map*/
+.map {
+    text-align: center;
+}
+.map__title {
+    font-size: 24px;
+    color: #f38181;
+    font-weight: 700;
+    text-decoration: none;
+}
+.map__title a {
+    color: inherit;
+}
+/*делаем подчеркиваник*/
+.map__title a:hover {
+    text-decoration: underline;
+}
+  /*полоска*/
+.map__title:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    margin: 15px auto 0;
+
+    background-color: #f38181;
+}
+    
+/*новый раздел footor*/
+.footor {
+    padding-top: 65px;
+    background-color: #f8f8f8;
+}
+.footor__inner {
+    padding-bottom: 65px;
+
+}
+.footor__logo {
+    margin-bottom: 30px;
+
+    font-size: 46px;
+    font-weight: 700;
+    color: #ccc;
+}
+.footor__text {
+    margin-bottom: 30px;
+    
+    font-size: 15px;
+    color: #999;
+}
+.footor__social {
+    margin-bottom: 25px;
+}
+
+.footor__social-header {
+    padding-bottom: 15px;
+
+    font-size: 14px;
+    color: #333;
+
+    border-bottom: 1px solid #e5e5e5;
+}
+ .footor__social-header {
+     font-size: 18px;
+ }
+ .footor__social-content {
+     padding-top: 15px;
+
+     font-size: 15px;
+     color: #999;
+     font-style: italic;
+     font-weight: 300;
+ }
+.footor__social-content a {
+    display: inline-block;
+    vertical-align: middle;/* отступы между иконками*/
+    margin-left: 10px;
+    font-size: 18px;
+     color: #95e1d3;
+ }
+
+ /*Subscribe*/
+ .Subscribe {
+     width: 100%;
+     max-width: 380px;
+     display: flex;
+ }
+ .Subscribe__input {
+     width: 60%;
+     height: 40px;
+    padding: 12px;
+
+     background: #fff;
+     border: 1px solid #e7e7e7;
+
+     font-family: 'Montserrat', sans-serif;
+     margin: 0px;
+     font-size: 15px;
+     line-height: 1.1;
+     color: #333;
+     font-style: italic;
+     font-weight: 300;
+ }
+.Subscribe__input::placeholder {
+    color: #ccc;
+}
+
+ .Subscribe__btn {
+     width: 40%;
+     height: 40px;
+     padding: 12px 30px;
+
+     background-color: #95e1d3;
+     border: 0;
+     cursor: pointer;/*при наводе на кнопку появляется палец*/
+ 
+     font-family: 'Montserrat', sans-serif;
+     font-size: 14px;
+     line-height: 1.1;
+     font-weight: 700;
+     color: #fff;
+     text-transform: uppercase;
+    }
